--- a/src/.env.example
+++ b/src/.env.example
@@ -9,33 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-
-# DB Module (read only)
-MYSQL_DB_READ_HOST=127.0.0.1
-MYSQL_DB_READ_PORT=3306
-MYSQL_DB_READ_DATABASE=laravel
-MYSQL_DB_READ_USERNAME=root
-MYSQL_DB_READ_PASSWORD=
-# DB Module (write)
-MYSQL_DB_WRITE_HOST=127.0.0.1
-MYSQL_DB_WRITE_PORT=3306
-MYSQL_DB_WRITE_DATABASE=laravel
-MYSQL_DB_WRITE_USERNAME=root
-MYSQL_DB_WRITE_PASSWORD=
-
-# PGSQL DB ENVs
-# DB Module (read only)
-PGSQL_DB_READ_HOST=127.0.0.1
-PGSQL_DB_READ_PORT=5432
-PGSQL_DB_READ_DATABASE=laravel
-PGSQL_DB_READ_USERNAME=root
-PGSQL_DB_READ_PASSWORD=
-# DB Module (write)
-PGSQL_DB_WRITE_HOST=127.0.0.1
-PGSQL_DB_WRITE_PORT=5432
-PGSQL_DB_WRITE_DATABASE=laravel
-PGSQL_DB_WRITE_USERNAME=root
-PGSQL_DB_WRITE_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -73,11 +51,9 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-JWT_SECRET=
-JWT_TTL=
