--- a/src/composer.json
+++ b/src/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "The skeleton application for the Laravel framework.",
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -11,8 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "payxpert/connect2pay": "^2.71",
-        "tymon/jwt-auth": "^2.0"
+        "payxpert/connect2pay": "^2.71"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
